crates/zeroship-runtime-macros/src/snapshots/zeroship_runtime_macros__webidl_dict_tests__dict_with_reject_null.snap
---
source: crates/zeroship-runtime-macros/src/webidl_dict_tests.rs
expression: format_expansion(out)
---
impl AbortHolder {
    /// Parse a JS value as a WebIDL dictionary of this type.
    ///
    /// Returns `Self::default()` for `null` / `undefined`.
    /// Returns `Err(TypeError)` if `value` is a non-null,
    /// non-undefined non-Object, or if any member fails its
    /// own conversion.
    pub fn from_v8(
        scope: &mut ::v8::PinScope,
        value: ::v8::Local<::v8::Value>,
    ) -> ::std::result::Result<Self, ::zeroship_runtime::macro_runtime::state::OpError> {
        if value.is_null_or_undefined() {
            return ::std::result::Result::Ok(
                <Self as ::core::default::Default>::default(),
            );
        }
        let __obj: ::v8::Local<::v8::Object> = match value.try_into() {
            Ok(o) => o,
            Err(_) => {
                return ::std::result::Result::Err(
                    ::zeroship_runtime::macro_runtime::state::OpError::type_error(
                        concat!(
                            "Cannot convert value to dictionary `",
                            stringify!(AbortHolder),
                            "` — value is not an object",
                        ),
                    ),
                );
            }
        };
        let signal: USVString = {
            let __key = ::v8::String::new(scope, "signal").unwrap();
            match __obj.get(scope, __key.into()) {
                ::std::option::Option::Some(__v) if !__v.is_undefined() => {
                    if __v.is_null() {
                        return ::std::result::Result::Err(
                            ::zeroship_runtime::macro_runtime::state::OpError::type_error(
                                "'signal' member: not a valid value (null is not allowed)",
                            ),
                        );
                    }
                    {
                        let __captured: ::std::result::Result<
                            USVString,
                            ::zeroship_runtime::macro_runtime::state::OpError,
                        > = {
                            ::v8::tc_scope!(let __tc, scope);
                            match <USVString as ::zeroship_runtime::macro_runtime::convert::WebIdlConvertible>::from_v8(
                                __tc,
                                __v,
                            ) {
                                ::std::result::Result::Ok(__val) => {
                                    ::std::result::Result::Ok(__val)
                                }
                                ::std::result::Result::Err(__inner_err) => {
                                    if __tc.has_caught() {
                                        let __exc = __tc
                                            .exception()
                                            .expect("has_caught implies Some");
                                        ::std::result::Result::Err(
                                            ::zeroship_runtime::macro_runtime::state::OpError::js_value(
                                                __tc,
                                                __exc,
                                                "Cannot convert dictionary member 'signal' (user code threw)",
                                            ),
                                        )
                                    } else {
                                        ::std::result::Result::Err(__inner_err)
                                    }
                                }
                            }
                        };
                        __captured?
                    }
                }
                _ => <USVString as ::core::default::Default>::default(),
            }
        };
        ::std::result::Result::Ok(Self { signal })
    }
}
impl ::zeroship_runtime::macro_runtime::convert::WebIdlConvertible for AbortHolder {
    fn from_v8(
        scope: &mut ::v8::PinScope,
        value: ::v8::Local<::v8::Value>,
    ) -> ::std::result::Result<Self, ::zeroship_runtime::macro_runtime::state::OpError> {
        <Self>::from_v8(scope, value)
    }
}
