crates/zeroship-runtime-macros/src/snapshots/zeroship_runtime_macros__webidl_dict_tests__dict_with_renamed_member.snap
---
source: crates/zeroship-runtime-macros/src/webidl_dict_tests.rs
expression: format_expansion(out)
---
impl EventInit {
    /// Parse a JS value as a WebIDL dictionary of this type.
    ///
    /// Returns `Self::default()` for `null` / `undefined`.
    /// Returns `Err(TypeError)` if `value` is a non-null,
    /// non-undefined non-Object, or if any member fails its
    /// own conversion.
    #[allow(unused_variables, clippy::needless_borrow)]
    pub fn from_v8(
        scope: &mut ::v8::PinScope,
        value: ::v8::Local<::v8::Value>,
    ) -> ::std::result::Result<Self, ::zeroship_runtime::macro_runtime::state::OpError> {
        if value.is_null_or_undefined() {
            return ::std::result::Result::Ok(
                <Self as ::core::default::Default>::default(),
            );
        }
        let __obj: ::v8::Local<::v8::Object> = match value.try_into() {
            Ok(o) => o,
            Err(_) => {
                return ::std::result::Result::Err(
                    ::zeroship_runtime::macro_runtime::state::OpError::type_error(
                        concat!(
                            "Cannot convert value to dictionary `",
                            stringify!(EventInit),
                            "` — value is not an object",
                        ),
                    ),
                );
            }
        };
        let type_field: USVString = {
            let __key = ::v8::String::new(scope, "type").unwrap();
            match __obj.get(scope, __key.into()) {
                ::std::option::Option::Some(__v) if !__v.is_undefined() => {
                    let __captured: ::std::result::Result<
                        USVString,
                        ::zeroship_runtime::macro_runtime::state::OpError,
                    > = {
                        ::v8::tc_scope!(let __tc, scope);
                        match <USVString as ::zeroship_runtime::macro_runtime::convert::WebIdlConvertible>::from_v8(
                            __tc,
                            __v,
                        ) {
                            ::std::result::Result::Ok(__val) => {
                                ::std::result::Result::Ok(__val)
                            }
                            ::std::result::Result::Err(__inner_err) => {
                                if __tc.has_caught() {
                                    let __exc = __tc
                                        .exception()
                                        .expect("has_caught implies Some");
                                    ::std::result::Result::Err(
                                        ::zeroship_runtime::macro_runtime::state::OpError::js_value(
                                            __tc,
                                            __exc,
                                            "Cannot convert dictionary member 'type' (user code threw)",
                                        ),
                                    )
                                } else {
                                    ::std::result::Result::Err(__inner_err)
                                }
                            }
                        }
                    };
                    __captured?
                }
                _ => <USVString as ::core::default::Default>::default(),
            }
        };
        let bubbles: Option<bool> = {
            let __key = ::v8::String::new(scope, "bubbles").unwrap();
            match __obj.get(scope, __key.into()) {
                ::std::option::Option::Some(__v) if !__v.is_undefined() => {
                    let __captured: ::std::result::Result<
                        Option<bool>,
                        ::zeroship_runtime::macro_runtime::state::OpError,
                    > = {
                        ::v8::tc_scope!(let __tc, scope);
                        match <Option<
                            bool,
                        > as ::zeroship_runtime::macro_runtime::convert::WebIdlConvertible>::from_v8(
                            __tc,
                            __v,
                        ) {
                            ::std::result::Result::Ok(__val) => {
                                ::std::result::Result::Ok(__val)
                            }
                            ::std::result::Result::Err(__inner_err) => {
                                if __tc.has_caught() {
                                    let __exc = __tc
                                        .exception()
                                        .expect("has_caught implies Some");
                                    ::std::result::Result::Err(
                                        ::zeroship_runtime::macro_runtime::state::OpError::js_value(
                                            __tc,
                                            __exc,
                                            "Cannot convert dictionary member 'bubbles' (user code threw)",
                                        ),
                                    )
                                } else {
                                    ::std::result::Result::Err(__inner_err)
                                }
                            }
                        }
                    };
                    __captured?
                }
                _ => <Option<bool> as ::core::default::Default>::default(),
            }
        };
        ::std::result::Result::Ok(Self { type_field, bubbles })
    }
}
impl ::zeroship_runtime::macro_runtime::convert::WebIdlConvertible for EventInit {
    fn from_v8(
        scope: &mut ::v8::PinScope,
        value: ::v8::Local<::v8::Value>,
    ) -> ::std::result::Result<Self, ::zeroship_runtime::macro_runtime::state::OpError> {
        <Self>::from_v8(scope, value)
    }
}
